# uno-agents

./: .gitignore  README.md  pyproject.toml
src/uno_agents/: __init__.py  game_constants.py  main.py
src/uno_agents/classes/: cards.py  dealer.py  player.py  stats.py
src/uno_agents/collections/: names.py
src/uno_agents/utils/: logger.py
